--- a/doc/Makefile.in
+++ b/doc/Makefile.in
@@ -66,7 +66,7 @@ database-structure.monops: database-structure.ps
 clean:
 		rm -f database-structure.ps database-structure.monops ps
 		rm -f *.{aux,cp,dvi,fn,ky,log,pg,toc,tp,vr}
-		rm -f guidelines.info
+		rm -f guidelines.info*
 
 distclean:
 		rm -f Makefile *.orig *~ *.~* ./#*#
