dpkg (1.2.12); priority=LOW
  * dpkg --search and --list understand and comment on diversions.
  * dpkg-divert displays diversions more intelligibly.

  * Guidelines are somewhat clearer about descriptions.
  * deb(5) describes new format; old moved to deb-old(5).  (Bug#3435.)
  * deb-control(5) carries a warning about being out of date.

  * Added 1996 to dselect version/copyright.

 -- Ian Jackson <ian@chiark.chu.cam.ac.uk>  Thu, 4 Jul 1996 15:04:49 +0100

--- a/doc/Makefile.in
+++ b/doc/Makefile.in
@@ -73,6 +73,7 @@ distclean:
 
 install:	all
 		$(INSTALL_DATA) deb.5 $(man5dir)/deb.$(man5)
+		$(INSTALL_DATA) deb-old.5 $(man5dir)/deb-old.$(man5)
 		$(INSTALL_DATA) deb-control.5 $(man5dir)/deb-control.$(man5)
 		$(INSTALL_DATA) guidelines.info guidelines.info-*[0-9] \
 			$(infodir)/.
