--- a/doc/Makefile.in
+++ b/doc/Makefile.in
@@ -24,7 +24,7 @@ mandir = $(prefix)/man
 man5dir = $(mandir)/man5
 man5 = 5
 docdir = $(prefix)/doc
-devdocdir = $(docdir)/dpkg
+dpkgdocdir = $(docdir)/dpkg
 
 DIST = Makefile.in $(SRC) $(MAN)
 
@@ -35,15 +35,15 @@ INSTALL_DATA = @INSTALL_DATA@
 MAKEINFO = makeinfo
 TEXI2DVI = texi2dvi
 
-DEVDOCS= auto-deconfiguration.txt dependency-ordering.txt \
+DPKGDOCS= auto-deconfiguration.txt dependency-ordering.txt \
  disappear-replace.txt diversions.text \
  essential-flag.txt version-ordering.txt
 
 # Files folded into main guidelines document
-OBSOLETEDOCS= descriptions.txt upgrades+errors.txt \
+OBSOLETEDOCS= descriptions.txt upgrades+errors.txt developer-keys.pgp \
  maintainer-script-args.txt virtual-dependencies.txt
 
-all:		$(DEVDOCS) guidelines.info
+all:		$(DPKGDOCS) guidelines.info
 
 guidelines.info: guidelines.texi
 		$(MAKEINFO) $(srcdir)/guidelines.texi
@@ -65,7 +65,7 @@ database-structure.monops: database-structure.ps
 
 clean:
 		rm -f database-structure.ps database-structure.monops ps
-		rm -f *.{aux,cp,dvi,fn,ky,log,pg,toc,tp,vr}
+		rm -f *.{aux,cp,dvi,fn,ky,log,pg,toc,tp,vr,bak}
 		rm -f guidelines.info*
 
 distclean:
@@ -77,6 +77,6 @@ install:	all
 		$(INSTALL_DATA) deb-control.5 $(man5dir)/deb-control.$(man5)
 		$(INSTALL_DATA) guidelines.info guidelines.info-*[0-9] \
 			$(infodir)/.
-		set -e; for d in $(DEVDOCS) ; do \
-			$(INSTALL_DATA) $$d $(devdocdir)/$$d ; \
+		set -e; for d in $(DPKGDOCS) ; do \
+			$(INSTALL_DATA) $$d $(dpkgdocdir)/$$d ; \
 		done
