--- a/scripts/Makefile.in
+++ b/scripts/Makefile.in
@@ -1,5 +1,5 @@
 # Copyright (C) 1994 Ian Murdock <imurdock@debian.org>
-# Copyright (C) 1994,1995 Ian Jackson <ijackson@nyx.cs.du.edu>
+# Copyright (C) 1994,1995,1996 Ian Jackson <ijackson@nyx.cs.du.edu>
 #
 #   This is free software; you can redistribute it and/or modify
 #   it under the terms of the GNU General Public License as
@@ -36,7 +36,8 @@ perlpath = @perlpath@
 
 MAN1 =  dpkg-name
 EXC =   dpkg-name
-MAN8 =	update-rc.d start-stop-daemon update-alternatives install-info
+MAN8 =	update-rc.d start-stop-daemon update-alternatives install-info \
+	dpkg-scanpackages
 SBIN =	update-rc.d start-stop-daemon update-alternatives install-info \
 	dpkg-scanpackages dpkg-divert cleanup-info
 
