dpkg (1.3.0) experimental; urgency=LOW
  * dpkg can install named pipes.
  * dpkg-deb supports directory for destination, generates filename.
  * dpkg-{source,gencontrol,genchanges,parsechangelog,buildpackage},
    dpkg-distaddfile scripts to support new source package format.
  * a.out build no longer supported.
  * Changed to new source package format.

 -- Ian Jackson <ian@chiark.chu.cam.ac.uk>  Tue, 6 Aug 1996 02:31:52 +0100

--- a/debian/control
+++ b/debian/control
@@ -1,11 +1,15 @@
+Source: dpkg
+Section: base
+Priority: required
+Maintainer: Ian Jackson <ian@chiark.chu.cam.ac.uk>
+Standards-Version: 0.1
+
 Package: dpkg
-Version: =
-Architecture: =
+Architecture: any
 Essential: yes
+Pre-Depends: libc5${libcver}, ncurses3.0
 Conflicts: dpkgname
 Replaces: dpkgname
-Pre-Depends: libc4 | libc
-Maintainer: Ian Jackson <ian@chiark.chu.cam.ac.uk>
 Description: Package maintenance system for Debian Linux
  This package contains the programs which handle the installation and
  removal of packages on your system.
