--- a/Makefile.in
+++ b/Makefile.in
@@ -29,6 +29,7 @@ sbindir = $(exec_prefix)/sbin
 libdir = $(prefix)/lib
 dpkglibdir = $(libdir)/dpkg
 methodsdir = $(dpkglibdir)/methods
+parsechangelogdir = $(dpkglibdir)/parsechangelog
 datadir = /var/lib/dpkg
 methodsdatadir = $(datadir)/methods
 methodsmnt = $(datadir)/methods/mnt
@@ -75,10 +76,10 @@ all:		version
 
 install:	all
 		$(BOURNESHELL) $(srcdir)/mkinstalldirs $(bindir) $(sbindir) \
-			$(man1dir) $(man5dir) $(man8dir) $(devdocdir) \
-			$(libdir) $(datadir) $(pinfodir) $(pupdatesdir) \
-			$(dpkglibdir) $(methodsdir) $(methodsdatadir) $(methodsmnt) \
-			$(altsdatadir) $(altsetcdir) $(partsdir) $(infodir)
+			$(man1dir) $(man5dir) $(man8dir) $(devdocdir) $(infodir) \
+			$(libdir) $(dpkglibdir) $(methodsdir) $(parsechangelogdir) \
+			$(datadir) $(pinfodir) $(pupdatesdir) $(methodsdatadir) \
+			$(methodsmnt) $(altsdatadir) $(altsetcdir) $(partsdir)
 		set -e; for d in $(SUBDIRS) ; do \
 			cd $$d ; \
 			$(MAKE) 'CC=$(CC)' 'LDFLAGS=$(LDFLAGS)' 'XLIBS=$(XLIBS)' \
