--- a/scripts/Makefile.in
+++ b/scripts/Makefile.in
@@ -30,16 +30,20 @@ man1 = 1
 man8 = 8
 libdir = $(prefix)/lib
 dpkglibdir = $(libdir)/dpkg
+parsechangelogdir = $(dpkglibdir)/parsechangelog
 etcdir= /etc
 altsetcdir = $(etcdir)/alternatives
 perlpath = @perlpath@
 
 MAN1 =  dpkg-name
-EXC =   dpkg-name
+EXC =   dpkg-name dpkg-source dpkg-genchanges dpkg-gencontrol \
+	dpkg-buildpackage dpkg-parsechangelog dpkg-distaddfile
 MAN8 =	update-rc.d start-stop-daemon update-alternatives install-info \
 	dpkg-scanpackages
 SBIN =	update-rc.d start-stop-daemon update-alternatives install-info \
 	dpkg-scanpackages dpkg-divert cleanup-info
+LIB =	controllib.pl
+CHGLGS = cl-dpkg
 
 INSTALL = @INSTALL@
 INSTALL_PROGRAM = @INSTALL_PROGRAM@
@@ -48,7 +52,8 @@ INSTALL_DATA = @INSTALL_DATA@
 .SUFFIXES:	.pl .sh .gzuue
 
 .pl:
-		sed <$@.pl 's:^#!/usr/bin/perl:#!$(perlpath):' \
+		sed <$@.pl 's:^#!/usr/bin/perl:#!$(perlpath):; \
+			    s:\$dpkglibdir= "\.":\$dpkglibdir= "$(dpkglibdir)":' \
 		  | ../insert-version.pl >$@.new
 		chmod +x $@.new
 		mv $@.new $@
@@ -56,6 +61,7 @@ INSTALL_DATA = @INSTALL_DATA@
 .sh:
 		sed <$@.sh 's:^dpkglibdir=/usr/lib/dpkg$$:dpkglibdir=$(dpkglibdir):' \
 		  | ../insert-version.pl >$@.new
+		chmod +x $@.new
 		mv $@.new $@
 
 .gzuue:
@@ -65,7 +71,7 @@ INSTALL_DATA = @INSTALL_DATA@
 		rm $@.gz
 		mv $@.new $@
 
-all:		$(EXC) $(SBIN)
+all:		$(EXC) $(SBIN) $(CHGLGS)
 
 clean:
 		rm -f $(EXC) $(SBIN) core *.new
@@ -78,3 +84,7 @@ install:	all
 		for f in $(MAN1) ; do $(INSTALL_DATA) $$f.1 $(man1dir)/$$f.$(man1) ; done
 		for f in $(SBIN) ; do $(INSTALL_PROGRAM) $$f $(sbindir)/$$f ; done
 		for f in $(MAN8) ; do $(INSTALL_DATA) $$f.8 $(man8dir)/$$f.$(man8) ; done
+		for f in $(LIB) ; do $(INSTALL_DATA) $$f $(dpkglibdir)/$$f; done
+		for f in $(CHGLGS) ; do $(INSTALL_PROGRAM) $$f \
+			$(dpkglibdir)/parsechangelog/`echo $$f | sed -e 's/^cl-//'` ; \
+		done
