dpkg (1.3.1) experimental; urgency=LOW
  * manpage for dpkg-source et al now available.
  * dpkg-changelog-mode.el installed in site-lisp, but still no autoload.

  * dpkg-source prints correct string for not-understood tar -vvt output.
  * dpkg-source parsing of tar -vvt output made more robust.

  * dpkg-buildpackage prints usage message on usage error.
  * dpkg-gencontrol can print usage message.
  * -T<varlistfile> option added to dpkg-source.
  * Description of -f<fileslistfile> corrected in dpkg-distaddfile usage.
  * -m<maintainer> synopsis changed in dpkg-genchanges usage.
  * debian/substvars may now contain blank lines.

 -- Ian Jackson <ian@chiark.chu.cam.ac.uk>  Thu, 8 Aug 1996 02:36:04 +0100

--- a/Makefile.in
+++ b/Makefile.in
@@ -30,6 +30,7 @@ libdir = $(prefix)/lib
 dpkglibdir = $(libdir)/dpkg
 methodsdir = $(dpkglibdir)/methods
 parsechangelogdir = $(dpkglibdir)/parsechangelog
+elispdir = $(libdir)/emacs/site-lisp
 datadir = /var/lib/dpkg
 methodsdatadir = $(datadir)/methods
 methodsmnt = $(datadir)/methods/mnt
@@ -78,8 +79,9 @@ install:	all
 		$(BOURNESHELL) $(srcdir)/mkinstalldirs $(bindir) $(sbindir) \
 			$(man1dir) $(man5dir) $(man8dir) $(devdocdir) $(infodir) \
 			$(libdir) $(dpkglibdir) $(methodsdir) $(parsechangelogdir) \
-			$(datadir) $(pinfodir) $(pupdatesdir) $(methodsdatadir) \
-			$(methodsmnt) $(altsdatadir) $(altsetcdir) $(partsdir)
+			$(elispdir) $(datadir) $(pinfodir) $(pupdatesdir) \
+			$(methodsdatadir) $(methodsmnt) $(altsdatadir) \
+			$(altsetcdir) $(partsdir)
 		set -e; for d in $(SUBDIRS) ; do \
 			cd $$d ; \
 			$(MAKE) 'CC=$(CC)' 'LDFLAGS=$(LDFLAGS)' 'XLIBS=$(XLIBS)' \
