dpkg (1.3.2) experimental; urgency=LOW (MEDIUM for dpkg-source)
  * Faster update-rc.d written in Perl by Miquel van Smoorenburg.
  * install-info --test doesn't lock dir.  (Bug#3992, thanks Darren).

  * dpkg-source doesn't break in the presence of any symlinks.

  * More developers' keys added to doc/developer-keys.pgp.
  * Install developers' keys in /usr/doc/dpkg/developer-keys.pgp.
  * dpkg-source documents undefined substvar behaviour.
  * minor debian/rules cleanups.

 -- Ian Jackson <ian@chiark.chu.cam.ac.uk>  Sat, 10 Aug 1996 02:13:47 +0100

--- a/debian/rules
+++ b/debian/rules
@@ -21,7 +21,7 @@ clean:
 
 binary:	checkroot build
 	-rm -rf debian/tmp
-	mkdir debian/tmp debian/tmp/DEBIAN
+	install -d debian/tmp debian/tmp/DEBIAN
 	install -d debian/tmp/usr/doc/{copyright,dpkg}
 	set -e; if [ $(arch) = i386 ]; then \
 		dpkg-gencontrol -Vlibcver=' (>= 5.2.18-2)' >$(cidir)/control ; \
