--- a/doc/Makefile.in
+++ b/doc/Makefile.in
@@ -37,10 +37,10 @@ TEXI2DVI = texi2dvi
 
 DPKGDOCS= auto-deconfiguration.txt dependency-ordering.txt \
  disappear-replace.txt diversions.text \
- essential-flag.txt version-ordering.txt
+ essential-flag.txt version-ordering.txt developer-keys.pgp
 
 # Files folded into main guidelines document
-OBSOLETEDOCS= descriptions.txt upgrades+errors.txt developer-keys.pgp \
+OBSOLETEDOCS= descriptions.txt upgrades+errors.txt \
  maintainer-script-args.txt virtual-dependencies.txt
 
 all:		$(DPKGDOCS) guidelines.info
