dpkg (1.3.5) experimental; urgency=low (high for debian-changelog-mode)
  * 822-date script included.  (Bug#4136.)
  * debian-changelog-add-version works on empty file.
  * debian-changelog-mode mode-help works properly.

  * dpkg-source tells patch not to make numbered backups.  (Bug#4135.)

  * More developers' PGP keys.
  * Paragraph on uucp -a and -g options removed from policy manual.

 -- Ian Jackson <ian@chiark.chu.cam.ac.uk>  Wed, 14 Aug 1996 14:46:47 +0100

--- a/scripts/Makefile.in
+++ b/scripts/Makefile.in
@@ -36,12 +36,12 @@ etcdir= /etc
 altsetcdir = $(etcdir)/alternatives
 perlpath = @perlpath@
 
-MAN1 =  dpkg-name dpkg-source
+MAN1 =  dpkg-name dpkg-source 822-date
 LSMAN = dpkg-source.$(man1)
 LSMANL=	dpkg-gencontrol dpkg-genchanges dpkg-buildpackage \
 	dpkg-distaddfile dpkg-parsechangelog
 EXC =   dpkg-name dpkg-source dpkg-genchanges dpkg-gencontrol \
-	dpkg-buildpackage dpkg-parsechangelog dpkg-distaddfile
+	dpkg-buildpackage dpkg-parsechangelog dpkg-distaddfile 822-date
 MAN8 =	update-rc.d start-stop-daemon update-alternatives install-info \
 	dpkg-scanpackages
 SBIN =	update-rc.d start-stop-daemon update-alternatives install-info \
