dpkg (1.3.6) experimental; urgency=low (HIGH for new source format)
  * dpkg-source now has broken argument unparsing for tar.  (Bug#4195.)

  * dpkg-gencontrol writes to debian/tmp/DEBIAN/control by default.
  * dpkg-shlibdeps script added.

  * Back to old sh update-rc.d, and removed manpage, because new Perl
    version and the manpage have different syntax and semantics.
  * update-rc.d prints usage message for missing terminal `.'.  (Bug#4122.)

  * Use rm -rf instead of just rm -r in dpkg-deb --info &c.  (Bug#4200.)

  * Added support for Installed-Size to dpkg-gencontrol, and documented.
  * Source packaging substitution variables and name syntax rationalised.
  * dpkg-source scripts' usage messages improved slightly.
  * dpkg-source works with non-empty second (orig dir) argument.

  * Added rationale for copyright policy to manual.
  * More developers' PGP keys.
  * Control database handling cleanups (usu. Source field blanked).

 -- Ian Jackson <ian@chiark.chu.cam.ac.uk>  Tue, 20 Aug 1996 15:39:58 +0100

--- a/debian/control
+++ b/debian/control
@@ -7,7 +7,7 @@ Standards-Version: 0.1
 Package: dpkg
 Architecture: any
 Essential: yes
-Pre-Depends: libc5${libcver}, ncurses3.0
+Pre-Depends: ${shlibs:Pre-Depends}
 Conflicts: dpkgname
 Replaces: dpkgname
 Description: Package maintenance system for Debian Linux
