--- a/scripts/Makefile.in
+++ b/scripts/Makefile.in
@@ -39,8 +39,8 @@ perlpath = @perlpath@
 MAN1 =  dpkg-name dpkg-source 822-date
 LSMAN = dpkg-source.$(man1)
 LSMANL=	dpkg-gencontrol dpkg-genchanges dpkg-buildpackage \
-	dpkg-distaddfile dpkg-parsechangelog
-EXC =   dpkg-name dpkg-source dpkg-genchanges dpkg-gencontrol \
+	dpkg-distaddfile dpkg-parsechangelog dpkg-shlibdeps
+EXC =   dpkg-name dpkg-source dpkg-genchanges dpkg-gencontrol dpkg-shlibdeps \
 	dpkg-buildpackage dpkg-parsechangelog dpkg-distaddfile 822-date
 MAN8 =	update-rc.d start-stop-daemon update-alternatives install-info \
 	dpkg-scanpackages
