dpkg (1.3.9) unstable; urgency=low (high for new source format)
  * dpkg --get-selections and --set-selections added.
  * New dpkg --force-not-root flag.

  * Don't replace directory with another package's file.  (Bug#4202.)

  * All manpages now installed compressed.
  * Copyright file moved to /usr/doc/dpkg/copyright.
  * Standards-Version updated (0.2.1.1).

 -- Ian Jackson <ian@chiark.chu.cam.ac.uk>  Sat, 24 Aug 1996 19:09:30 +0100

--- a/debian/rules
+++ b/debian/rules
@@ -44,9 +44,10 @@ binary-arch:	checkroot build
 		datadir=$(DIR)/debian/tmp/var/lib/dpkg \
 		etcdir=$(DIR)/debian/tmp/etc \
 		install
-	cp debian/copyright debian/tmp/usr/doc/copyright/dpkg
-	cp TODO debian/tmp/usr/doc/dpkg/WISHLIST
+	find debian/tmp/usr/man -type f | xargs gzip -9v
 	gzip -9v debian/tmp/usr/doc/dpkg/changelog.*
+	cp debian/copyright debian/tmp/usr/doc/dpkg/copyright
+	cp TODO debian/tmp/usr/doc/dpkg/WISHLIST
 	touch debian/tmp/var/lib/dpkg/{status,available}
 	dpkg-shlibdeps -dPre-Depends main/dpkg dselect/dselect
 	dpkg-gencontrol
