--- a/main/Makefile.in
+++ b/main/Makefile.in
@@ -26,10 +26,10 @@ mandir = $(prefix)/man
 man8dir = $(mandir)/man8
 man8 = 8
 
-SRC = main.c enquiry.c filesdb.c archives.c processarc.c cleanup.c \
+SRC = main.c enquiry.c filesdb.c archives.c processarc.c cleanup.c select.c \
       packages.c configure.c remove.c help.c depcon.c errors.c update.c
 
-OBJ = main.o enquiry.o filesdb.o archives.o processarc.o cleanup.o \
+OBJ = main.o enquiry.o filesdb.o archives.o processarc.o cleanup.o select.o \
       packages.o configure.o remove.o help.o depcon.o errors.o update.o
 
 INSTALL = @INSTALL@
