dpkg (1.3.10) unstable; urgency=medium
  * dpkg-source(1) manpage alias symlinks are not dangling.
  * dselect selects things by default if they are installed.
  * Added `pentium' as alias for `i386' architecture.
  * Added `Suggests: cpio, patch' and explanatory text to Description.
    (Bugs #4262, #4263.)

  * More developers' PGP keys.
  * Manual updates, new source format released.

 -- Ian Jackson <ian@chiark.chu.cam.ac.uk>  Mon, 26 Aug 1996 14:30:44 +0100

--- a/debian/control
+++ b/debian/control
@@ -8,6 +8,7 @@ Package: dpkg
 Architecture: any
 Essential: yes
 Pre-Depends: ${shlibs:Pre-Depends}
+Suggests: cpio, patch
 Conflicts: dpkgname
 Replaces: dpkgname
 Description: Package maintenance system for Debian Linux
@@ -17,3 +18,6 @@ Description: Package maintenance system for Debian Linux
  The primary interface for the dpkg suite is the `dselect' program;
  a more low-level and less user-friendly interface is available in
  the form of the `dpkg' command.
+ .
+ In order to manipulate source packages using `dpkg-source' you will
+ need to install the `cpio' and `patch' packages.
