dpkg (1.3.11) unstable; urgency=low
  * EBUSY when dpkg removes a directory is only a warning.

  * dpkg-genchanges generates sensible warning (not confusing error
    about mismatch) for missing Section/Priority in binary packages.

  * Added dpkg --print-gnu-build-architecture option.
  * shlibs.default for m68k provided, as a copy of i386 version.

 -- Ian Jackson <ian@chiark.chu.cam.ac.uk>  Thu, 29 Aug 1996 14:05:02 +0100

--- a/configure.in
+++ b/configure.in
@@ -33,10 +33,7 @@ changequote([, ])dnl
     dpkg_arch=""
     dpkg_archwhy=" (bad output from --print-libgcc-file-name)"
    else
-changequote(, )dnl
-    dpkg_arch2="`sed -e '/^'$dpkg_arch'[ 	]/!d; s/^[-0-9a-z]*[	 ]*//' \
-		     $srcdir/archtable`"
-changequote([, ])dnl
+    dpkg_arch2="`awk '$1 == "'$dpkg_arch'" { print $2 }' $srcdir/archtable`"
     if test "x$dpkg_arch2" = "x$dpkg_arch"; then
      dpkg_archwhy=" (obtained from gcc)"
     elif test "x$dpkg_arch2" != x; then
