dpkg (1.3.12) unstable; urgency=medium
  * dpkg prints old version number when upgrading.
  * dpkg-deb tries to detect and flag corruption by ASCII download.

  * dpkg-genchanges and dpkg-buildpackage say what source is included.

  * dpkg-buildpackage passes +clearsig=on to PGP (or pgpcommand).

  * dpkg-source prints better error for cpio not honouring -0t.
  * control file Suggests cpio >= 2.4.2, rather than just cpio.

 -- Ian Jackson <ian@chiark.chu.cam.ac.uk>  Fri, 30 Aug 1996 15:31:51 +0100

--- a/debian/control
+++ b/debian/control
@@ -8,7 +8,7 @@ Package: dpkg
 Architecture: any
 Essential: yes
 Pre-Depends: ${shlibs:Pre-Depends}
-Suggests: cpio, patch
+Suggests: cpio (>= 2.4.2-2), patch
 Conflicts: dpkgname
 Replaces: dpkgname
 Description: Package maintenance system for Debian Linux
