dpkg (1.3.14) unstable; urgency=low
  * dpkg-buildpackage new -tc (clean source tree) option.

  * Formatted documentation removed by `make clean' and so not in source.
  * Manuals and own Standards-Version: updated to 2.1.0.0.
  * Distribute {policy,programmer}.{html.tar,ps}.gz with each upload.

 -- Ian Jackson <ian@chiark.chu.cam.ac.uk>  Sun, 1 Sep 1996 20:43:40 +0100

--- a/debian/rules
+++ b/debian/rules
@@ -21,8 +21,14 @@ clean:
 
 binary:		binary-arch binary-indep
 
-binary-indep:
+binary-indep:	build
 	$(checkdir)
+	set -e -x; cd doc; for f in policy programmer; do \
+		debiandoc2ps -pa4 -O $$f.sgml | gzip -9v >../../$$f.ps.gz; \
+		dpkg-distaddfile -f../debian/files $$f.ps.gz byhand -; \
+		GZIP=-9v tar zcf ../../$$f.html.tar.gz $$f.html; \
+		dpkg-distaddfile -f../debian/files $$f.html.tar.gz byhand -; \
+	done
 
 binary-arch:	checkroot build
 	$(checkdir)
