--- a/doc/Makefile.in
+++ b/doc/Makefile.in
@@ -74,8 +74,8 @@ clean:
 		rm -f $(SGMLDOCSTAMPS)
 		rm -f database-structure.ps database-structure.monops ps
 		rm -f *.{aux,cp,dvi,fn,ky,log,pg,toc,tp,vr,bak}
-		rm -f guidelines.info* *.sasp*
-		rm -rf {programmer,policy}.html
+		rm -f guidelines.info*
+		rm -rf {programmer,policy}.{html*,sasp*,text*,ps*,lout*}
 
 distclean:
 		rm -f Makefile *.orig *~ *.~* ./#*#
